# Claude

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  docker_restart_agent.py  pyproject.toml
infrastructure/docker/: Dockerfile
langchain_agent/: __init__.py  config.py  graph.py  main.py  state.py  supervisor.py
langchain_agent/agents/: coder.py  data.py  research.py
langchain_agent/tools/: repl_tools.py  search_tools.py  stats_tools.py  stock_tools.py
scripts/: ingest_excel.py  seed_sample_data.py
src/api/: main.py
src/api/routers/: ingest.py  query.py
src/config/: logging.py  settings.py
src/llm/: client.py
src/llm/prompts/: context_builder.py  system_prompts.py
src/llm/retrieval/: filter_parser.py  retriever.py
src/pipeline/chunking/: narrative_builder.py
src/pipeline/cleaning/: normalizer.py  pii_scrubber.py
src/pipeline/embedding/: embedder.py
src/pipeline/ingestion/: excel_reader.py  schema_detector.py
src/storage/: interfaces.py
src/storage/cache/: redis_cache.py
src/storage/relational/: postgres.py
src/storage/vector/: chroma_store.py
src/workers/: celery_app.py  ingest_tasks.py
tasks/: todo.md
tests/unit/llm/: test_filter_parser.py
tests/unit/pipeline/: test_narrative_builder.py  test_normalizer.py  test_schema_detector.py
