[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servicenow-llm-pipeline"
version = "0.1.0"
description = "RAG-based LLM Q&A pipeline over ServiceNow ITSM Excel exports"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # LLM
    "anthropic>=0.34.0",
    # Embeddings
    "voyageai>=0.3.0",
    # Data pipeline
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    # Vector store (Phase 1)
    "chromadb>=0.5.0",
    # Relational DB
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # Cache / task queue
    "redis>=5.0.0",
    "celery>=5.4.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
agents = [
    # LangChain core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    # LangGraph
    "langgraph>=0.2.0",
    # Experimental (Python REPL)
    "langchain-experimental>=0.3.0",
    # Financial data
    "yfinance>=0.2.40",
    # Search
    "duckduckgo-search>=6.0.0",
    # Numerical analysis
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "faker>=25.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "langchain_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
